Handling no data entry + updated content for Grounds of appeal

--- a/app/views/before-you-start/v11/check-answers.html
+++ b/app/views/before-you-start/v11/check-answers.html
@@ -101,7 +101,7 @@
                 {{ data["bys-enforcement-issue-date-month"] | formatMonth }}
                 {{ data["bys-enforcement-issue-date-year"] }}
               {% else %}
-                {{ 20 | daysInFuture }}.
+                {{ 8 | daysAgo }}.
               {% endif %}
 
             </dd>
