--- a/app/views/enforcement/v1/grounds/groundC-text.html
+++ b/app/views/enforcement/v1/grounds/groundC-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us why you think your development does not need planning permission" %}
+{% set title = "Tell us why the supposed breach of planning control does not need planning permission" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
