--- a/app/views/enforcement/v1/grounds/groundE-text.html
+++ b/app/views/enforcement/v1/grounds/groundE-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us why you think the local planning department did not serve copies of the enforcement notice as they're legally required to" %}
+{% set title = "Tell us why you think the local planning department did not serve copies of the enforcement notice as they’re legally required to" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
