--- a/app/views/enforcement/v1/grounds/groundF-text.html
+++ b/app/views/enforcement/v1/grounds/groundF-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us how you’re required to do more than is needed to undo the development" %}
+{% set title = "Tell us why you think there’s more work to do than is needed to undo the supposed breach of planning control" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
