--- a/app/views/enforcement/v1/grounds/groundG-text.html
+++ b/app/views/enforcement/v1/grounds/groundG-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us why you need more time to undo the development" %}
+{% set title = "Tell us why more time is needed to undo the supposed breach of planning control" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -68,7 +68,7 @@
           </a>
         </p>
 
-        
+
         {{ govukButton({
           href: "application",
           text: "Continue"
