--- a/app/views/enforcement/v1/grounds/grounds.html
+++ b/app/views/enforcement/v1/grounds/grounds.html
@@ -38,51 +38,58 @@
               </h1>
             </legend>
 
-            <!-- <p class="govuk-body">
-              It does not matter what your status was at the time the enforcement notice was served. You must tell us your status at the time of making this appeal.
-            </p> -->
+            <p class="govuk-hint">
+              Select all that apply.
+            </p>
 
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-1" name="grounds-1" type="checkbox" value="groundA">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-1">
-                  I believe my development should’ve been allowed
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground A</span>
+                  The supposed breach of planning control should be allowed
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-2" name="grounds-2" type="checkbox" value="groundB">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-2">
-                  The development never happened, or it’s not being used in the way that the local planning department says it is
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground B</span>
+                  The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-3" name="grounds-3" type="checkbox" value="groundC">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-3">
-                  My developement does not need planning permission
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground C</span>
+                  The supposed breach of planning control does not need planning permission
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-4" name="grounds-4" type="checkbox" value="groundD">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-4">
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground D</span>
                   The local planning department missed its deadline to take action
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-5" name="grounds-5" type="checkbox" value="groundE">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-5">
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span>
                   The local planning department did not serve copies of the enforcement notice as they’re legally required to
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundF">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-6">
-                  I’m required to do more than is needed to undo the development
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground F</span>
+                  There’s more work to do than is needed to undo the supposed breach of planning control
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundG">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-7">
-                  I need more time to undo the development
+                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground G</span>
+                  More time is needed to undo the supposed breach of planning control
                 </label>
               </div>
             </div>
