--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,8 +67,11 @@ service-start{% extends "layout.html" %}
                       Appeal an enforcement notice - Version 1
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
-                      <li><a href="/before-you-start/v11">Before you start</a></li>
-                      <li><a href="/enforcement/v1/before-you-continue">Before you continue</a></li>
+                      <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
+                      <li><a href="/enforcement/v1/skip/appeal-before-you-start">Before you start</a></li>
+                      <li><a href="/enforcement/v1/skip/appeal-start">Before you continue</a></li>
+                      <li><a href="/enforcement/v1/skip/tasks">Completed task list</a></li>
+
                     </ul>
                   </div>
 
