--- a/app/views/enforcement/v1/grounds/groundA-text.html
+++ b/app/views/enforcement/v1/grounds/groundA-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us why you think your development should’ve been allowed" %}
+{% set title = "Tell us why you think the supposed breach of planning control should be allowed" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
