--- a/app/views/enforcement/v1/grounds/groundB-text.html
+++ b/app/views/enforcement/v1/grounds/groundB-text.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us how the development never happened, or is not being used in the way that the local planning department says it is" %}
+{% set title = "Tell is how the supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
