--- a/app/views/enforcement/v1/grounds/groundG-text.html
+++ b/app/views/enforcement/v1/grounds/groundG-text.html
@@ -40,6 +40,9 @@
             {{ govukTextarea({
               name: "more-detail",
               id: "more-detail",
+              hint: {
+                text: "You should say what you consider to be a more reasonable period of time and why."
+              },
               label: {
                 text: title,
                 classes: "govuk-label--l",
@@ -50,9 +53,9 @@
           </fieldset>
         </div>
 
-        <p class="govuk-body">
+        <!-- <p class="govuk-body">
           You should say what you consider to be a more reasonable period of time and why.
-        </p>
+        </p> -->
 
         <p class="govuk-body">
           If you intend to only select this statement, you should consider negotiating the timescale with the local planning department.
