Update to index status for enforcement journey, Ready for UR

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,8 +60,8 @@ service-start{% extends "layout.html" %}
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
-                      classes: "govuk-tag--red govuk-!-margin-bottom-3",
-                      text: "WIP"
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                       Appeal an enforcement notice - Version 1
@@ -352,8 +352,8 @@ service-start{% extends "layout.html" %}
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds"><div class="govuk-inset-text govuk-!-margin-top-0">
                   {{ govukTag({
-                    classes: "govuk-tag--green govuk-!-margin-bottom-3",
-                    text: "Ready for UR"
+                    classes: "govuk-tag--blue govuk-!-margin-bottom-3",
+                    text: "Done"
                   }) }}
                   <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                     Version 15 - Listed building consent appeal submission
@@ -394,13 +394,15 @@ service-start{% extends "layout.html" %}
                   <details class="govuk-details" data-module="govuk-details">
                     <summary class="govuk-details__summary">
                       <span class="govuk-details__summary-text">
-                        User research (2)
+                        User research (4)
                       </span>
                     </summary>
                     <div class="govuk-details__text">
                       <ul class="govuk-list govuk-list--bullet">
                         <li><a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/979140609/UR+Listed+Building+Appeals+-+Appellant+Usability+Testing" target="_blank">1st round UR discussion guide</a></li>
                         <li><a href="https://miro.com/app/board/uXjVO321JMQ=/?moveToWidget=3458764525111814660&cot=14" target="_blank">1st round of UR analysis with 2 listed building appellants</a></li>
+                        <li><a href="https://pins-ds.atlassian.net/wiki/spaces/AAPDS/pages/984219817/UR+Listed+Building+Appeals+-+Applicant+Usability+Testing" target="_blank">2nd round UR discussion guide</a></li>
+                        <li><a href="https://miro.com/app/board/uXjVO0S3sFM=/?moveToWidget=3458764526153521447&cot=14" target="_blank">2nd round of UR analysis with 4 applicants</a></li>
                       </ul>
                     </div>
                   </details>
