--- a/app/views/enforcement/v1/task-list.html
+++ b/app/views/enforcement/v1/task-list.html
@@ -89,7 +89,7 @@
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
               <a href="additional-people/additional-people">
-                Add people to the appeal
+                Tell us about additional people
               </a>
             </span>
             {% if data["enforcement-taskliststatus-addpeople"] == "Complete" %}
