--- a/app/views/enforcement/v1/check-your-answers.html
+++ b/app/views/enforcement/v1/check-your-answers.html
@@ -37,7 +37,7 @@
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Was the enforcement notice served against you
+              Was the enforcement notice served against you?
             </dt>
             <dd class="govuk-summary-list__value">
               {% if data['enforcement-identity'] == 'appellant' %}
