--- a/app/views/enforcement/v1/grounds/application.html
+++ b/app/views/enforcement/v1/grounds/application.html
@@ -77,7 +77,7 @@
           }
         },
         hint: {
-          text: "The planning application must have been for the same breech of planning control as written in the enforcement notice."
+          text: "The planning application must have been for the same breach of planning control as written in the enforcement notice."
         },
         items: [
           {
