Update to logic for grounds/reasons

--- a/app/views/enforcement/v1/grounds/groundA-file.html
+++ b/app/views/enforcement/v1/grounds/groundA-file.html
@@ -31,7 +31,9 @@
     <form action="" method="post">
 
       <div class="govuk-form-group">
-        <label class="govuk-label govuk-label--l" for="caseofficer-{{version}}-update-otherpolicies">
+
+        <!-- reasons by file -->
+        <label class="govuk-label govuk-label--l" for="enforcement-ground-b-reasons">
           {{ title  }}
         </label>
         <p class="govuk-hint">
@@ -39,7 +41,7 @@
         <p>
 
         <!-- upload files -->
-        <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-plansdrawings-files">
+        <label class="govuk-label govuk-label--m" for="enforcement-ground-b-reasons">
           Drag and drop or choose files
         </label>
         <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" type="file" multiple>
