--- a/app/views/enforcement/v1/grounds/groundB-file.html
+++ b/app/views/enforcement/v1/grounds/groundB-file.html
@@ -30,7 +30,7 @@
       <form action="" method="post">
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--l" for="caseofficer-{{version}}-update-otherpolicies">
+          <label class="govuk-label govuk-label--l" for="enforcement-ground-b-reasons">
             {{ title  }}
           </label>
           <p class="govuk-hint">
@@ -38,10 +38,11 @@
           <p>
 
           <!-- upload files -->
-          <label class="govuk-label govuk-label--m" for="appealsub-{{version}}-appealdocuments-plansdrawings-files">
+          <label class="govuk-label govuk-label--m" for="enforcement-ground-b-reasons">
             Drag and drop or choose files
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-b-reasons" name="enforcement-ground-a-reasons" type="file" multiple>
+
+          <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-b-reasons" name="enforcement-ground-b-reasons" type="file" multiple>
 
         </div>
 
