--- a/app/views/enforcement/v1/check-your-answers.html
+++ b/app/views/enforcement/v1/check-your-answers.html
@@ -388,10 +388,27 @@
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="javascript:preventDefault();">
-                Change<span class="govuk-visually-hidden"> how would you prefer us to decide your appeal</span>
+                Change<span class="govuk-visually-hidden"> your grounds of appeal</span>
               </a>
             </dd>
           </div>
+
+          <!-- if ground a, show fees answer -->
+          {% if data['grounds-1'] %}
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Have you paid the fee for the same development as in the enforcement notice?
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{ data["enforcement-fees-paid"] }}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="javascript:preventDefault();">
+                  Change<span class="govuk-visually-hidden"> if you have paid the fee for the same development</span>
+                </a>
+              </dd>
+            </div>
+          {% endif %}
 
           {% if data["enforcement-application"] == "Yes" %}
             <div class="govuk-summary-list__row">
