--- a/app/views/enforcement/v1/grounds/fees-exempt.html
+++ b/app/views/enforcement/v1/grounds/fees-exempt.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Have you paid the fee for the same development as in the enforcement notice?" %}
+{% set title = "Is there a reason why you should not pay a fee?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form action="/feespaid" method="post">
+    <form action="/fee" method="post">
 
       <div class="govuk-form-group">
 
