Fees question and fix to some input field values

--- a/app/views/enforcement/v1/contact-details/contact-details.html
+++ b/app/views/enforcement/v1/contact-details/contact-details.html
@@ -42,7 +42,8 @@
           hint: {
             html: hintHtml
           },
-          classes: "govuk-!-width-two-thirds"
+          classes: "govuk-!-width-two-thirds",
+          value: data["enforcement-your-email"]
         }) }}
 
         {{ govukInput({
@@ -54,7 +55,8 @@
           hint: {
             html: hintHtml
           },
-          classes: "govuk-!-width-two-thirds"
+          classes: "govuk-!-width-two-thirds",
+          value: data["enforcement-your-name"]
         }) }}
 
         {{ govukInput({
