Updated buttons in submission journey to work with save and return
Also updated the manual address inputs to match the latest version in GDS design system

--- a/app/views/enforcement/v1/additional-people/add-person.html
+++ b/app/views/enforcement/v1/additional-people/add-person.html
@@ -51,7 +51,12 @@
 
       <div class="govuk-button-group">
         {{ govukButton({
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       </div>
 
