--- a/app/views/enforcement/v1/grounds/application-decision.html
+++ b/app/views/enforcement/v1/grounds/application-decision.html
@@ -90,9 +90,17 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
+          {{ govukButton({
+            href: "javascript:preventDefault();",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
