--- a/app/views/enforcement/v1/grounds/fees-exempt.html
+++ b/app/views/enforcement/v1/grounds/fees-exempt.html
@@ -72,45 +72,88 @@
 
       </div>
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
       <!-- route user based on what they selected -->
       <!-- {% if data['grounds-2'] %}
         {{ govukButton({
           href: "groundB",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% elif data['grounds-3'] %}
         {{ govukButton({
           href: "groundC",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% elif data['grounds-4'] %}
         {{ govukButton({
           href: "groundD",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% elif data['grounds-5'] %}
         {{ govukButton({
           href: "groundE",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% elif data['grounds-6'] %}
         {{ govukButton({
           href: "groundF",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% elif data['grounds-7'] %}
         {{ govukButton({
           href: "groundG",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% else %}
         {{ govukButton({
           href: "application",
-          text: "Continue"
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
       {% endif %} -->
 
