--- a/app/views/enforcement/v1/grounds/groundG.html
+++ b/app/views/enforcement/v1/grounds/groundG.html
@@ -103,11 +103,18 @@
 
       {% endif %}
 
-      <!-- route user based on what they selected -->
-      {{ govukButton({
-        href: "application",
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        <!-- route user based on what they selected -->
+        {{ govukButton({
+          href: "application",
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
