--- a/app/views/enforcement/v1/upload/obligation-not-started.html
+++ b/app/views/enforcement/v1/upload/obligation-not-started.html
@@ -39,9 +39,16 @@
         Your deadline to submit your finalised planning obligation is around 6 weeks after you submit your appeal. We’ll tell you the exact date when we confirm your appeal.
       </p>
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
