--- a/app/views/enforcement/v1/upload/planning-obligation.html
+++ b/app/views/enforcement/v1/upload/planning-obligation.html
@@ -83,9 +83,16 @@
         </div>
       </details>
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
