--- a/app/views/enforcement/v1/appeal-site/health-and-safety-issues.html
+++ b/app/views/enforcement/v1/appeal-site/health-and-safety-issues.html
@@ -93,9 +93,16 @@
       }) }}
 
 
-      {{ govukButton({
-        text: "Save and continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
