--- a/app/views/enforcement/v1/appeal-site/postcode-address.html
+++ b/app/views/enforcement/v1/appeal-site/postcode-address.html
@@ -47,7 +47,7 @@
             id: "enforcement-site-address-line1",
             name: "enforcement-site-address-line1",
             label: {
-              html: 'Building and street <span class="govuk-visually-hidden">line 1 of 2</span>'
+              text: 'Address line 1'
             },
             value: data["enforcement-site-address-line1"]
           }) }}
@@ -56,7 +56,7 @@
             id: "enforcement-site-address-line2",
             name: "enforcement-site-address-line2",
             label: {
-              html: '<span class="govuk-visually-hidden">Building and street line 2 of 2</span>'
+              text: 'Address line 2 (optional)'
             },
             value: data["enforcement-site-address-line2"]
           }) }}
@@ -87,7 +87,6 @@
             label: {
               text: "Postcode"
             },
-            value: "Value",
             value: data["enforcement-site-address-postcode"],
             classes: "govuk-input--width-10"
           }) }}
@@ -100,9 +99,16 @@
           </a>
         </p>
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
+          {{ govukButton({
+            href: "javascript:preventDefault();",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
