--- a/app/views/enforcement/v1/grounds/groundA.html
+++ b/app/views/enforcement/v1/grounds/groundA.html
@@ -103,10 +103,18 @@
 
       {% endif %}
 
-      {{ govukButton({
-        href: "fees",
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          href: "fees",
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
+      
     </form>
 
   </div>
