--- a/app/views/enforcement/v1/grounds/groundD.html
+++ b/app/views/enforcement/v1/grounds/groundD.html
@@ -103,28 +103,36 @@
 
       {% endif %}
 
-      <!-- route user based on what they selected -->
-      {% if data['grounds-5'] %}
+
+      <div class="govuk-button-group">
+        <!-- route user based on what they selected -->
+        {% if data['grounds-5'] %}
+          {{ govukButton({
+            href: "groundE",
+            text: "Save and continue"
+          }) }}
+        {% elif data['grounds-6'] %}
+          {{ govukButton({
+            href: "groundF",
+            text: "Save and continue"
+          }) }}
+        {% elif data['grounds-7'] %}
+          {{ govukButton({
+            href: "groundG",
+            text: "Save and continue"
+          }) }}
+        {% else %}
+          {{ govukButton({
+            href: "application",
+            text: "Save and continue"
+          }) }}
+        {% endif %}
         {{ govukButton({
-          href: "groundE",
-          text: "Continue"
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
         }) }}
-      {% elif data['grounds-6'] %}
-        {{ govukButton({
-          href: "groundF",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-7'] %}
-        {{ govukButton({
-          href: "groundG",
-          text: "Continue"
-        }) }}
-      {% else %}
-        {{ govukButton({
-          href: "application",
-          text: "Continue"
-        }) }}
-      {% endif %}
+      </div>
 
     </form>
 
