--- a/app/views/enforcement/v1/grounds/groundF-text.html
+++ b/app/views/enforcement/v1/grounds/groundF-text.html
@@ -59,18 +59,26 @@
           </a>
         </p>
 
-        <!-- route user based on what they selected -->
-        {% if data['grounds-7'] %}
+
+        <div class="govuk-button-group">
+          <!-- route user based on what they selected -->
+          {% if data['grounds-7'] %}
+            {{ govukButton({
+              href: "groundG-text",
+              text: "Save and continue"
+            }) }}
+          {% else %}
+            {{ govukButton({
+              href: "application",
+              text: "Save and continue"
+            }) }}
+          {% endif %}
           {{ govukButton({
-            href: "groundG-text",
-            text: "Continue"
+            href: "javascript:preventDefault();",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
           }) }}
-        {% else %}
-          {{ govukButton({
-            href: "application",
-            text: "Continue"
-          }) }}
-        {% endif %}
+        </div>
 
       </form>
 
