--- a/app/views/enforcement/v1/grounds/groundG-text.html
+++ b/app/views/enforcement/v1/grounds/groundG-text.html
@@ -72,10 +72,18 @@
         </p>
 
 
-        {{ govukButton({
-          href: "application",
-          text: "Continue"
-        }) }}
+
+        <div class="govuk-button-group">
+          {{ govukButton({
+            href: "application",
+            text: "Save and continue"
+          }) }}
+          {{ govukButton({
+            href: "javascript:preventDefault();",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
