--- a/app/views/enforcement/v1/procedure/inquiry-witnesses.html
+++ b/app/views/enforcement/v1/procedure/inquiry-witnesses.html
@@ -45,9 +45,16 @@
         value: data["enforcement-inquiry-witnesses"]
       }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
