--- a/app/views/enforcement/v1/task-list.html
+++ b/app/views/enforcement/v1/task-list.html
@@ -193,6 +193,12 @@
         </ul>
       </div>
 
+      {{ govukButton({
+        href: "javascript:preventDefault();",
+        text: "Save and come back later",
+        classes: "govuk-button--secondary"
+      }) }}
+
     </div>
   </div>
 
