--- a/app/views/enforcement/v1/upload/planning-obligation-status.html
+++ b/app/views/enforcement/v1/upload/planning-obligation-status.html
@@ -61,9 +61,16 @@
         ]
       }) }}
 
-      {{ govukButton({
-        text: "Continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+        {{ govukButton({
+          href: "javascript:preventDefault();",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </form>
 
