Updated content for fees

--- a/app/views/enforcement/v1/grounds/fees-exempt.html
+++ b/app/views/enforcement/v1/grounds/fees-exempt.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Is there a reason why you do not have to pay a fee?" %}
+{% set title = "Do you have a reason why you have not paid for planning permission?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
