--- a/app/views/enforcement/v1/grounds/fees.html
+++ b/app/views/enforcement/v1/grounds/fees.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Have you paid the fee for the same development as in the enforcement notice?" %}
+{% set title = "Have you paid the planning permission fee to your local planning department?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
