--- a/app/views/enforcement/v1/grounds/fees-exempt.html
+++ b/app/views/enforcement/v1/grounds/fees-exempt.html
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form action="/fee" method="post">
+    <form action="/endgrounds" method="post">
 
       <div class="govuk-form-group">
 
